fixed bar .. z-index 상승..

--- a/band_fe/src/styles/pages/FixedMenuBar.module.css
+++ b/band_fe/src/styles/pages/FixedMenuBar.module.css
@@ -9,6 +9,7 @@
     border-top-right-radius: 8px;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
     transition: 0.5s;
+    z-index: 10;
 }
 
 .menuArea {
